присвоил классы, сделал header

--- a/index.html
+++ b/index.html
@@ -5,11 +5,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" type="text/css" href="">
+    <link rel="stylesheet" type="text/css" href="./styles.css">
 </head>
 <body>
-    <header class="header">
-        
-    </header>
+    <header class="shapka">
+    <nav>
+        <a href="/" class="logo">WebStudio</a>
+
+<ul>
+<li><a href="" class="headerlinkstudio">Студія</a></li>
+<li><a href="" class="headerlinkport">Портфоліо</a></li>
+<li><a href="" class="headerlinkcont">Контакти</a></li>
+</ul>
+
+<ul><li><address><a href="mailto:info@devstudio.com" class="mail">info@devstudio.com</a></address></li>
+<li><a href="tel:0961111111" class="tel">+38 096 111 11 11</a></li>
+</ul>
+</nav>
+</header>
 </body>
 </html>
