добавил секции, изображения

--- a/index.html
+++ b/index.html
@@ -1,27 +1,94 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<html lang="X-UA-Compatible">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" type="text/css" href="./styles.css">
-</head>
-<body>
+    <link rel="stylesheet" type="text/css" href="./styles.css" />
+  </head>
+  <body>
     <header class="shapka">
-    <nav>
-        <a href="/" class="logo">WebStudio</a>
+      <nav>
+        <a href="/" class="logo">Web<span>Studio</span></a>
 
-<ul>
-<li><a href="" class="headerlinkstudio">Студія</a></li>
-<li><a href="" class="headerlinkport">Портфоліо</a></li>
-<li><a href="" class="headerlinkcont">Контакти</a></li>
-</ul>
-
-<ul><li><address><a href="mailto:info@devstudio.com" class="mail">info@devstudio.com</a></address></li>
-<li><a href="tel:0961111111" class="tel">+38 096 111 11 11</a></li>
-</ul>
-</nav>
-</header>
-</body>
+        <ul>
+          <li><a href="" class="headerlinkstudio">Студія</a></li>
+          <li><a href="" class="headerlinkport">Портфоліо</a></li>
+          <li><a href="" class="headerlinkcont">Контакти</a></li>
+        </ul>
+      </nav>
+      <ul>
+        <li>
+          <a href="mailto:info@devstudio.com" class="mail"
+            >info@devstudio.com
+          </a>
+        </li>
+        <li><a href="tel:0961111111" class="tel">+38 096 111 11 11</a></li>
+      </ul>
+    </header>
+    <main>
+      <section>
+        <h1>Ефективні рішення для вашого бізнесу</h1>
+        <button type="button">Замовити послугу</button>
+      </section>
+      <section>
+        <ul>
+          <li>
+            <p>УВАГА ДО ДЕТАЛЕЙ</p>
+            <p>
+              Ідейні міркування, і навіть початок повсякденної роботи з
+              формування позиції.
+            </p>
+          </li>
+          <li>
+            <p>ПУНКТУАЛЬНІСТЬ</p>
+            <p>
+              Завдання організації, особливо рамки і місце навчання кадрів тягне
+              у себе.
+            </p>
+          </li>
+          <li>
+            <p>ПЛАНУВАННЯ</p>
+            <p>
+              Так само консультація з широким активом значною мірою зумовлює.
+            </p>
+          </li>
+          <li>
+            <p>СУЧАСНІ ТЕХНОЛОГІЇ</p>
+            <p>
+              Значимість цих проблем настільки очевидна, що реалізація планових
+              завдань.
+            </p>
+          </li>
+        </ul>
+        <h2>Чим ми займаємося</h2>
+        <img src="./images/img1.jpg" alt="веб_розробка" />
+        <img src="./images/img2.jpg" alt="мобільна_розробка" />
+        <img src="./images/img3.jpg" alt="веб_дизайн" />
+      </section>
+      <section>
+        <h2>Наша команда</h2>
+        <img
+          src="./images/Ігор Дем'яненко (1).jpg"
+          alt="photo_product_designer"
+        />
+        <p>Ігор Дем'яненко</p>
+        <p>Product Designer</p>
+        <img
+          src="./images/Ольга Рєпіна (1).jpg"
+          alt="photo_frontend_developer"
+        />
+        <p>Ольга Рєпіна</p>
+        <p>Frontend Developer</p>
+        <img src="./images/Микола Тарасов (1).jpg" alt="photo_marketing" />
+        <p>Микола Тарасов</p>
+        <p>Marketing</p>
+        <img src="./images/Михайло Єрмаков (1).jpg" alt="photo_ui_designer" />
+        <p>Михайло Єрмаков</p>
+        <p>UI Designer</p>
+      </section>
+    </main>
+  </body>
+  <footer></footer>
 </html>
