переименовал фото и альты

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" type="text/css" href="./styles.css" />
   </head>
   <body>
-    <header class="shapka">
+    <header>
       <nav>
         <a href="/" class="logo">Web<span>Studio</span></a>
 
@@ -63,32 +63,58 @@
           </li>
         </ul>
         <h2>Чим ми займаємося</h2>
-        <img src="./images/img1.jpg" alt="веб_розробка" />
-        <img src="./images/img2.jpg" alt="мобільна_розробка" />
-        <img src="./images/img3.jpg" alt="веб_дизайн" />
+        <img src="./images/img1.jpg" alt="web_development" width="370" />
+        <img src="./images/img2.jpg" alt="mobile_development" width="370" />
+        <img src="./images/img3.jpg" alt="web_design" width="370" />
       </section>
       <section>
         <h2>Наша команда</h2>
         <img
           src="./images/Ігор Дем'яненко (1).jpg"
           alt="photo_product_designer"
+          width="270"
+          height="260"
         />
         <p>Ігор Дем'яненко</p>
         <p>Product Designer</p>
         <img
           src="./images/Ольга Рєпіна (1).jpg"
           alt="photo_frontend_developer"
+          width="270"
+          height="260"
         />
         <p>Ольга Рєпіна</p>
         <p>Frontend Developer</p>
-        <img src="./images/Микола Тарасов (1).jpg" alt="photo_marketing" />
+        <img
+          src="./images/Микола Тарасов (1).jpg"
+          alt="photo_marketing"
+          width="270"
+          height="260"
+        />
         <p>Микола Тарасов</p>
         <p>Marketing</p>
-        <img src="./images/Михайло Єрмаков (1).jpg" alt="photo_ui_designer" />
+        <img
+          src="./images/Михайло Єрмаков (1).jpg"
+          alt="photo_ui_designer"
+          width="270"
+          height="260"
+        />
         <p>Михайло Єрмаков</p>
         <p>UI Designer</p>
       </section>
     </main>
   </body>
-  <footer></footer>
+  <footer>
+    <p>
+      <a href="/" class="logo">Web<span>Studio</span></a>
+    </p>
+
+    <p>м. Київ, пр-т Лесі Українки, 26</p>
+    <ul>
+      <li>
+        <a href="mailto:info@devstudio.com" class="mail">info@devstudio.com </a>
+      </li>
+      <li><a href="tel:0961111111" class="tel">+38 096 111 11 11</a></li>
+    </ul>
+  </footer>
 </html>
