исправил ошибки названий изображений

--- a/index.html
+++ b/index.html
@@ -68,9 +68,9 @@
         <img src="./images/img3.jpg" alt="web_design" width="370" />
       </section>
       <section>
-        <h2>Наша команда</h2>
+        <h3>Наша команда</h3>
         <img
-          src="./images/Ігор Дем'яненко (1).jpg"
+          src="./images/image1.jpg"
           alt="photo_product_designer"
           width="270"
           height="260"
@@ -78,7 +78,7 @@
         <p>Ігор Дем'яненко</p>
         <p>Product Designer</p>
         <img
-          src="./images/Ольга Рєпіна (1).jpg"
+          src="./images/image2.jpg"
           alt="photo_frontend_developer"
           width="270"
           height="260"
@@ -86,7 +86,7 @@
         <p>Ольга Рєпіна</p>
         <p>Frontend Developer</p>
         <img
-          src="./images/Микола Тарасов (1).jpg"
+          src="./images/image3.jpg"
           alt="photo_marketing"
           width="270"
           height="260"
@@ -94,7 +94,7 @@
         <p>Микола Тарасов</p>
         <p>Marketing</p>
         <img
-          src="./images/Михайло Єрмаков (1).jpg"
+          src="./images/image4.jpg"
           alt="photo_ui_designer"
           width="270"
           height="260"
