--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
           height="260"
         />
         <p>Ігор Дем'яненко</p>
-        <p>Product Designer</p>
+        <p lang="en">Product Designer</p>
         <img
           src="./images/image2.jpg"
           alt="photo_frontend_developer"
@@ -84,7 +84,7 @@
           height="260"
         />
         <p>Ольга Рєпіна</p>
-        <p>Frontend Developer</p>
+        <p lang="en">Frontend Developer</p>
         <img
           src="./images/image3.jpg"
           alt="photo_marketing"
@@ -92,7 +92,7 @@
           height="260"
         />
         <p>Микола Тарасов</p>
-        <p>Marketing</p>
+        <p lang="en">Marketing</p>
         <img
           src="./images/image4.jpg"
           alt="photo_ui_designer"
@@ -100,7 +100,7 @@
           height="260"
         />
         <p>Михайло Єрмаков</p>
-        <p>UI Designer</p>
+        <p lang="en">UI Designer</p>
       </section>
     </main>
   </body>
@@ -108,13 +108,23 @@
     <p>
       <a href="/" class="logo">Web<span>Studio</span></a>
     </p>
-
-    <p>м. Київ, пр-т Лесі Українки, 26</p>
-    <ul>
-      <li>
-        <a href="mailto:info@devstudio.com" class="mail">info@devstudio.com </a>
-      </li>
-      <li><a href="tel:0961111111" class="tel">+38 096 111 11 11</a></li>
-    </ul>
+    <address>
+      <ul>
+        <li>
+          <a
+            href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9"
+            target="_blank"
+            rel="noopener noreferrer nofollow"
+            >м. Київ, пр-т Лесі Українки, 26</a
+          >
+        </li>
+        <li>
+          <a href="mailto:info@devstudio.com" class="mail"
+            >info@devstudio.com
+          </a>
+        </li>
+        <li><a href="tel:0961111111" class="tel">+38 096 111 11 11</a></li>
+      </ul>
+    </address>
   </footer>
 </html>
