исправил ошибки, изменил секции
-исправил язык страницы
-исправил раздел "контакты"
-исправил секцию
-исправил описание альтов
-добавил заголовки вместо параграфов
-изменил тайтл
-добавил маркированный список в секцию
-пофиксил все ошибки в валидаторе

--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="X-UA-Compatible">
+<html lang="uk">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>WebStudio</title>
     <link rel="stylesheet" type="text/css" href="./styles.css" />
   </head>
   <body>
@@ -24,7 +24,7 @@
             >info@devstudio.com
           </a>
         </li>
-        <li><a href="tel:0961111111" class="tel">+38 096 111 11 11</a></li>
+        <li><a href="tel:+380961111111" class="tel">+38 096 111 11 11</a></li>
       </ul>
     </header>
     <main>
@@ -33,98 +33,107 @@
         <button type="button">Замовити послугу</button>
       </section>
       <section>
+        <h2>Наші особливості</h2>
         <ul>
           <li>
-            <p>УВАГА ДО ДЕТАЛЕЙ</p>
+            <h3>Увага до деталей</h3>
             <p>
               Ідейні міркування, і навіть початок повсякденної роботи з
               формування позиції.
             </p>
           </li>
           <li>
-            <p>ПУНКТУАЛЬНІСТЬ</p>
+            <h3>Пунктуальність</h3>
             <p>
               Завдання організації, особливо рамки і місце навчання кадрів тягне
               у себе.
             </p>
           </li>
           <li>
-            <p>ПЛАНУВАННЯ</p>
+            <h3>Планування</h3>
             <p>
               Так само консультація з широким активом значною мірою зумовлює.
             </p>
           </li>
           <li>
-            <p>СУЧАСНІ ТЕХНОЛОГІЇ</p>
+            <h3>Сучасні технології</h3>
             <p>
               Значимість цих проблем настільки очевидна, що реалізація планових
               завдань.
             </p>
           </li>
         </ul>
-        <h2>Чим ми займаємося</h2>
-        <img src="./images/img1.jpg" alt="web_development" width="370" />
-        <img src="./images/img2.jpg" alt="mobile_development" width="370" />
-        <img src="./images/img3.jpg" alt="web_design" width="370" />
       </section>
       <section>
-        <h3>Наша команда</h3>
-        <img
+        <h2>Чим ми займаємося</h2>
+        <ul>
+        <li><img src="./images/img1.jpg" alt="веб-розробка" width="370" /></li>
+        <li></li><img src="./images/img2.jpg" alt="мобільна-розробка" width="370" /></li>
+        <li></li><img src="./images/img3.jpg" alt="веб-дизайн" width="370" /></li>
+      </ul>
+    </section>
+      <section>
+        <h2>Наша команда</h2>
+        <ul>
+        <li>
+          <img
           src="./images/image1.jpg"
-          alt="photo_product_designer"
+          alt="фото-продакт-дизайнера"
           width="270"
           height="260"
         />
-        <p>Ігор Дем'яненко</p>
-        <p lang="en">Product Designer</p>
-        <img
+        <h3>Ігор Дем'яненко</h3>
+        <p lang="en">Product Designer</p></li>
+       <li><img
           src="./images/image2.jpg"
-          alt="photo_frontend_developer"
+          alt="фото-фронт-енд-розробника"
           width="270"
           height="260"
         />
-        <p>Ольга Рєпіна</p>
-        <p lang="en">Frontend Developer</p>
-        <img
+        <h3>Ольга Рєпіна</h3>
+        <p lang="en">Frontend Developer</p></li>
+       <li><img
           src="./images/image3.jpg"
-          alt="photo_marketing"
+          alt="фото-маркетолога"
           width="270"
           height="260"
         />
-        <p>Микола Тарасов</p>
-        <p lang="en">Marketing</p>
-        <img
+        <h3>Микола Тарасов</h3>
+        <p lang="en">Marketing</p></li>
+       <li><img
           src="./images/image4.jpg"
-          alt="photo_ui_designer"
+          alt="фото-юай-розробника"
           width="270"
           height="260"
         />
-        <p>Михайло Єрмаков</p>
-        <p lang="en">UI Designer</p>
+        <h3>Михайло Єрмаков</h3>
+        <p lang="en">UI Designer</p></li>
+        </ul>
       </section>
     </main>
-  </body>
-  <footer>
-    <p>
+
+    <footer>
+    
       <a href="/" class="logo">Web<span>Studio</span></a>
-    </p>
-    <address>
-      <ul>
-        <li>
-          <a
-            href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9"
-            target="_blank"
-            rel="noopener noreferrer nofollow"
-            >м. Київ, пр-т Лесі Українки, 26</a
-          >
-        </li>
-        <li>
-          <a href="mailto:info@devstudio.com" class="mail"
-            >info@devstudio.com
-          </a>
-        </li>
-        <li><a href="tel:0961111111" class="tel">+38 096 111 11 11</a></li>
-      </ul>
-    </address>
-  </footer>
+  
+      <address>
+        <ul>
+          <li>
+            <a
+              href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9"
+              target="_blank"
+              rel="noopener noreferrer nofollow"
+              >м. Київ, пр-т Лесі Українки, 26</a
+            >
+          </li>
+          <li>
+            <a href="mailto:info@devstudio.com" class="mail"
+              >info@devstudio.com
+            </a>
+          </li>
+          <li><a href="tel:+380961111111" class="tel">+38 096 111 11 11</a></li>
+        </ul>
+      </address>
+    </footer>
+  </body>
 </html>
