--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
         <h2>Чим ми займаємося</h2>
         <ul>
         <li><img src="./images/img1.jpg" alt="веб-розробка" width="370" /></li>
-        <li></li><img src="./images/img2.jpg" alt="мобільна-розробка" width="370" /></li>
-        <li></li><img src="./images/img3.jpg" alt="веб-дизайн" width="370" /></li>
+        <li><img src="./images/img2.jpg" alt="мобільна-розробка" width="370" /></li>
+        <li><img src="./images/img3.jpg" alt="веб-дизайн" width="370" /></li>
       </ul>
     </section>
       <section>
